src/test/compile-fail/unsafe-fn-called-from-safe.rs
// -*- rust -*-

unsafe fn f() { ret; }

fn main() {
    f(); //~ ERROR access to unsafe function requires unsafe function or block
}
